--- a/client-n/src/components/loader/Loader.css
+++ b/client-n/src/components/loader/Loader.css
@@ -9,7 +9,7 @@
     position: absolute;
     left: 8px;
     width: 16px;
-    background: #cef;
+    background: #FC8507;
     animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .lds-facebook div:nth-child(1) {
